css/styles.css
/* Web Fonts ----------------------- */


/* Base Styles --------------------- */
* {
  box-sizing: border-box;
}
html {
  font-size: 1.25em; /* 20px on most screens */
}
body {
  /* width: 90%; */
  /* margin: auto; */
  font: 300 100%/1.5 "Open Sans", sans-serif;
}
nav, header {
  width: 90%;
  margin: auto;
}
ul {
  list-style-type: none;
}
li {
  text-decoration: none;
}
header {
  padding-bottom: 2rem;
}
img {
  width: 100%; /* responsive images */
}
p {
  text-align: center;
  font-size: .77rem;
}
main {
  /* margin: 0 -16px; */
  background-color: white;
}
h1 {
  padding: 2rem 0;
  text-align: center;
  font-weight: bold;
}

/* Main Styles --------------------- */
.wrapper {
  background-color:whitesmoke;
}
.name, .nav a {
  display: block;
  padding: .25rem 1rem;
  margin: 1rem auto;
  text-align: center;
  font-weight: bold;
}
.name {
  font-size: 1.4rem;
}
.nav a {
  text-transform: uppercase;
  text-decoration: none;
  font-size: 1rem;
  background-color: white;
  color: black;
}
header img {
  padding: 1.5rem 2.2rem 1.2rem 2.2rem;
}
header p {
  color: gray;
}

/* Media Queries ------------------- */

